# drae-near

./: .gitignore  README.md  SEMVER.md  package.json  requirements.txt
benchmarks/mutual_friends/: .gitignore  README.md  agent_runner.py  env.py  generate_game.py  requirements.txt  run_game.py
docs/technical/: ARCHITECTURE.md  GOAL_VALUE_TREE.md
src/core/sig/: README.md  SIG_GUARD_BENCHMARK_README.md  __init__.py  install.py  metric_justification.md  pyproject.toml  requirements.txt  run_benchmark.py  run_sig_guard_benchmark.py  setup.py  sig.py  sig_guard.py  sig_guard_auto_tune.py  sig_guard_benchmark.py  test_imports.py  test_sig.py  test_simple.py
