[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drae-sig"
version = "0.1.0"
description = "Semantic Integrity Guarantee (SIG) - A comprehensive library for measuring semantic integrity between texts"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Drae Team", email = "team@drae.ai"}
]
maintainers = [
    {name = "Drae Team", email = "team@drae.ai"}
]
keywords = ["nlp", "semantic-similarity", "text-analysis", "machine-learning", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "spacy>=3.6.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
benchmark = [
    "datasets>=2.14.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/rDRAE/drae-near"
Repository = "https://github.com/rDRAE/drae-near.git"
"Bug Tracker" = "https://github.com/rDRAE/drae-near/issues"
Documentation = "https://github.com/rDRAE/drae-near/tree/main/src/core/sig"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests", "test_*.py"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
